# auto_simple

./: main.py  pyproject.toml
data/: resumes.db
src/batch/: __init__.py  processor.py
src/db/: __init__.py  database.py
src/extraction/: __init__.py  chain.py
src/graph/: __init__.py  workflow.py
src/models/: __init__.py  user.py
src/parsers/: __init__.py  file_parser.py
src/recommendation/: __init__.py  matcher.py
static/: app.js  style.css
templates/: batch.html  summary.html  upload.html
