[project]
name = "applifictaon"
version = "0.1.0"
description = "基于LangChain+LangGraph的简历智能解析与部门推荐系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "easyocr>=1.7.2",
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pypdf>=6.12.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
